--- a/final report.tex
+++ b/final report.tex
@@ -30,7 +30,7 @@
 \maketitle
 
 \begin{abstract}
-In this report, we talk about a specific architecture for quantum machine learning (QML) called the Quantum Boltzmann Machine (QBM). Many QML architectures have been proposed, but the Quantum Boltzmann Machine is one of the few that has been experimentally realized on quantum hardware. We look into the setup of QBM, its training procedures, different variations, and current experimental results on it. 
+In this report, we talk about a specific architecture for quantum machine learning (QML) called the Quantum Boltzmann Machine (QBM). Many QML architectures have been proposed, but the Quantum Boltzmann Machine is one of the few that has been experimentally realized on quantum hardware. We look into the setup of QBM, its training procedures, different variations, and experimental results on it. 
 \end{abstract}
 
 \section{Introduction}
@@ -182,9 +182,9 @@ Some very recent research include the experiments done in \cite{TrainingRQBM} an
 
 
 \section{Conclusion}
-We have reviewed the design of the Quantum Boltzmann Machine and how it could be used for machine learning tasks. Theory behind the QBM still has room for development but it's an interesting area where it is currently possible to experimentally observe behavior of a quantum machine learning architecture while developing it. \par
+We have reviewed the design of the Quantum Boltzmann Machine and how it could be used for machine learning tasks. Theory behind the QBM still has room for development but it's one of the rare instances of quantum machine learning where experimental observations could happen as theories are being developed concurrently. \par
 
-It would be very interesting to see more experiments done on the QBM for different tasks, as well has hardware improvements like noise reductions. Possible future directions include better gradient calculations, alternative ways to define interactions between qubits, and ways to encode new problems in the Hamiltonian of the QBM. 
+It would be very interesting to see more experiments done on the QBM for different tasks, as well has hardware improvements like noise reductions. Possible future directions include better gradient calculations, alternative ways to define interactions between qubits, and new ways to encode new problems in the Hamiltonian of the QBM. 
 
 
 
